<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tunnel-K</string>
    <string name="set_tunnel_conditions">Set Tunnel Conditions</string>
    <string name="set_airfoil_shape">Set Airfoil Shape</string>
    <string name="rotate_shape">Rotate Shape</string>
    <string name="show_results">Show Results</string>
    <string name="draw_shape">Draw Shape</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="pressure">Pressure</string>
    <string name="altitude">Altitude</string>
    <string name="density">Density</string>
    <string name="mach_number">Mach Number</string>
    <string name="angle_of_attack">Angle of Attack</string>
    <string name="tunnel_shape">Tunnel Shape</string>
    <string name="tweet_results">Tweet Results</string>
    <string name="email_results">Email Results</string>
    <string name="new_sim">New Sim &gt;&gt;</string>
    <string name="solver_started">Solver Started</string>
    <string name="solver_completed">Solver Completed</string>
    <string name="solver_stopped">Solver Stopped</string>
    <string-array name="low_med_high_array">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string name="splash">Splash</string>
    <string name="touch_to_start">Touch To Start</string>
    <string name="fan_speed">Fan Speed</string>
    <string name="set_fan_speed">Set Fan Speed</string>
    <string name="physical_tunnel_hmi">Physical Tunnel HMI</string>
    <string name="physical">Run the wind tunnel</string>
    <string name="virtual">Simulate the wind tunnel</string>
    <string name="choose_tunnel_type">What would you like to do?</string>
    <string name="virtual_home">Virtual Tunnel</string>
    <string name="physical_home">Physical Tunnel</string>
    <string name="start_over">Start Over</string>
    <string name="add_to_existing_trend">Add To Existing Trend</string>
    <string name="trend">Trend</string>
    <string name="view_trend_graph">View Trend Graph</string>
    <string name="trending_tags">TRENDING_TAGS</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="timeout">Are you still there?\nTouch anywhere to confirm.</string>
    <string name="controller_address">Controller Address</string>
    <string name="settings">Settings</string>
    <string name="default_controller_address">http://192.168.2.50/alldata</string>
</resources>
