<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/showResultsLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <Button
        android:id="@+id/tweetResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/tweet_results"
    />
    <Button
        android:id="@+id/emailResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tweetResults"
        android:layout_alignLeft="@id/tweetResults"
        android:layout_alignRight="@id/tweetResults"
        android:text="@string/email_results"
    />
    <TextView
        android:id="@+id/liftDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="Lift: 1.895"
        android:textColor="#00FF00"
    />
    <TextView
        android:id="@+id/dragDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/liftDisplay"
        android:text="Drag: 0.643"
        android:textColor="#FF0000"
    />
    <Button
        android:id="@+id/machNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/dragDisplay"
        android:text="@string/mach_number"
    />
    <Button
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/machNumber"
        android:layout_alignParentRight="true"
        android:layout_below="@id/machNumber"
        android:text="@string/pressure"
    />
    <Button
        android:id="@+id/newSim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/new_sim"
    />
    <ImageView
        android:id="@+id/resultsImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tweetResults"
        android:layout_toLeftOf="@id/machNumber"
        android:layout_above="@id/newSim"
        android:src="@drawable/visualization_mockup"
        android:scaleType="fitXY"
    />

</RelativeLayout>
