<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <Button
        android:id="@+id/setTunnelConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/set_tunnel_conditions"
        android:onClick="setTunnelConditionsClicked"
    />
    <Button
        android:id="@+id/setAirfoilShape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/setTunnelConditions"
        android:layout_alignLeft="@id/setTunnelConditions"
        android:layout_alignRight="@id/setTunnelConditions"
        android:text="@string/set_airfoil_shape"
        android:onClick="setAirfoilShapeClicked"
    />
    <Button
        android:id="@+id/rotateShape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/setAirfoilShape"
        android:layout_alignLeft="@id/setAirfoilShape"
        android:layout_alignRight="@id/setAirfoilShape"
        android:text="@string/rotate_shape"
        android:onClick="rotateShapeClicked"
    />
	<Button
        android:id="@+id/simulate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rotateShape"
        android:layout_alignLeft="@id/rotateShape"
        android:layout_alignRight="@id/rotateShape"
        android:text="Simulate"
        android:onClick="simulateClicked"
    />
    <TextView
        android:id="@+id/windSpeedDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:text="Wind Speed: High"
    />
    <TextView
        android:id="@+id/altitudeDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/windSpeedDisplay"
        android:layout_alignParentRight="true"
        android:text="Altitude: Medium"
    />
    <TextView
        android:id="@+id/angleOfAttackDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/altitudeDisplay"
        android:layout_alignParentRight="true"
        android:text="Angle of Attack: 0"
    />
	<ImageView
        android:id="@+id/displayShapeImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/angleOfAttackDisplay"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/setTunnelConditions"
        android:src="@drawable/airfoil"
        android:scaleType="center"
    />
    <ScrollView
        android:id="@+id/solverTextScroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/setTunnelConditions"
        android:layout_below="@id/displayShapeImageView"
        android:layout_alignParentRight="true"
        >
	    <TextView
	        android:id="@+id/solverOutput"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	    />
    </ScrollView>
</RelativeLayout>
